chore: different files storage directory for production and for tests

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -22,3 +22,6 @@ storage:
   limits:
     free: 21474836480     # 20 GB in bytes
     premium: 107374182400 # 100 GB in bytes
+
+files:
+  root-dir: "files-test/"
