--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,3 +40,6 @@ storage:
   limits:
     free: 21474836480     # 20 GB in bytes
     premium: 107374182400 # 100 GB in bytes
+
+files:
+  root-dir: "files/"
